@@ -9,15 +9,20 @@ Darwin*) exit 0 ;;
 *) ;;
 esac
 
+[ -z "$STRIP" -a -n "$1" ] && STRIP="$1"
+[ -z "$OBJDUMP" -a -n "$2" ] && OBJDUMP="$2"
+[ -z "$STRIP" ] && STRIP=strip
+[ -z "$OBJDUMP" ] && OBJDUMP=objdump
+
 # Strip .comment and .note sections (the latter only if it is not allocated)
 # for already stripped elf files in the build root
 for f in `find $RPM_BUILD_ROOT -type f \( -perm -0100 -or -perm -0010 -or -perm -0001 \) -exec file {} \; | \
         grep -v "^${RPM_BUILD_ROOT}/\?usr/lib/debug"  | \
 	sed -n -e 's/^\(.*\):[ 	]*ELF.*, stripped/\1/p'`; do
 	note="-R .note"
-	if objdump -h $f | grep '^[ 	]*[0-9]*[ 	]*.note[ 	]' -A 1 | \
+	if $OBJDUMP -h $f | grep '^[ 	]*[0-9]*[ 	]*.note[ 	]' -A 1 | \
 		grep ALLOC >/dev/null; then
 		note=
 	fi
-	strip -R .comment $note "$f" || :
+	$STRIP -R .comment $note "$f" || :
 done
