@@ -12,6 +12,9 @@ Darwin*) exit 0 ;;
 *) ;;
 esac
 
+[ -z "$STRIP" -a -n "$1" ] && STRIP="$1"
+[ -z "$STRIP" ] && STRIP=strip
+
 # Strip ELF shared objects
 # Please note we don't restrict our search to executable files because
 # our libraries are not (should not be, at least) +x.
@@ -19,5 +22,5 @@ for f in `find $RPM_BUILD_ROOT -type f -a -exec file {} \; | \
         grep -v "^${RPM_BUILD_ROOT}/\?usr/lib/debug"  | \
 	grep ' shared object,' | \
 	sed -n -e 's/^\(.*\):[ 	]*ELF.*, not stripped/\1/p'`; do
-	strip --strip-unneeded "$f"
+	$STRIP --strip-unneeded "$f"
 done
